# NucleusESP32

./: .gitattributes  .gitignore  CMakeLists.txt  DEMOD.py  Fiat Bravo 2010 S.Croce 433.88 am650.sub  Fiat type 0_ultra_jezyk.sub  Ford_.sub  HYU V0_great_konserva.sub  HYU V2_random_habar.sub  KIA_V5_x20.sub  KIA_V5_x20_new_sn.sub  Kia1_5cl_5op_5tr.sub  Kia3_5cl_5op_5tr.sub  Kia4_5cl_5op_5tr.sub  KiaA7_5op_5hold_5cl_5hold.sub  KiaV1_5cl_5op.sub  README.md  Subaro_Impreza_Am650.sub  conanfile.py  decode.py  flipper.py  fob_analysis.py  kia.sub  kiaalb.sub  output.sub  partitions_3mb.csv  peugeot.py  platformio.ini  platformio.ini.fixed  proto_pirate.fap  pyproject.toml  requirements-dev.txt  test_v5_kia_hyu.sub
.github/workflows/: ci.yml  dependency-updates.yml  performance-regression.yml  release.yml  reusable-build.yml  reusable-quality.yml  reusable-security.yml  reusable-testing.yml
debug/: proto_pirate_d.elf
nrf-research-firmware/prog/usb-flasher/: logitech-usb-flash.py  logitech-usb-restore.py  unifying.py  usb-flash.py
nrf-research-firmware/tools/: nrf24-scanner.py  nrf24-sniffer.py
nrf-research-firmware/tools/lib/: common.py  nrf24.py
scripts/: bootstrap.py  conan_pio_bridge.py  test_runner.py
src/: CommandDispatcher.cpp  CommandDispatcher.hpp  ErrorHandler.cpp  ErrorHandler.hpp  MessageProtocol.cpp  MessageProtocol.hpp  XPT2046_Bitbang.cpp  globals.cpp  globals.h  main.cpp
src/GUI/: ScreenManager.cpp  ScreenManager.h  events.cpp  events.h
src/flatbuffers/: protocol_stubs.hpp
src/flatbuffers/schemas/: nucleus_protocol.fbs
src/modules/ETC/: SDcard.cpp
src/modules/RF/: CC1101.cpp  CC1101.h  Interfaces.h  test.sracka
src/modules/RF/protocols/: AnsonicProtocol.cpp  AnsonicProtocol.h  BMWProtocol.cpp  BMWProtocol.h  CitroenProtocol.cpp  CitroenProtocol.h  FiatV0Protocol.cpp  FiatV0Protocol.h  FordV0Protocol.cpp  FordV0Protocol.h  Holtek_HT12xProtocol.h  HondaProtocol.cpp  HondaProtocol.h  HyundaiProtocol.cpp  HyundaiProtocol.h  PeugeotProtocol.cpp  PeugeotProtocol.h  VWProtocol.cpp  VWProtocol.h  help.h
src/modules/dataProcessing/: SubGHzParser.cpp  SubGHzParser.h
src/modules/nfc/: iso14443astarget.h  nfc.h
src/modules/nfc/EMVGrabber/: EMVGrabber.cpp
src/modules/nfc/protocols/: MFClassicPoller.cpp
test/: conftest.py
test/integration/: __init__.py  test_hardware_integration.py  test_nucleus_integration.py
test_harness/: README.md  __init__.py  demo.py  nucleus_test_harness.py  pytest_plugin.py  run_nucleus_unit_tests.py  test_hardware.py  test_integration.py
